--- a/control
+++ b/control
@@ -1,11 +1,9 @@
-Package: com.ryannair05.gridiculousfix
-Name: gridiculousfix
+Package: com.hoanpro.StatusBar
+Name: StatusBar
 Version: 1.0.0
-Architecture: iphoneos-arm
-Description: Fix gridiculous on iOS 14!
-Maintainer: Ryan Nair
-Author: Ryan Nair
+Architecture: iphoneos-arm64
+Description: !
+Maintainer: Hoanpro
+Author: Hoanpro
 Section: Tweaks
 Depends: mobilesubstrate (>= 0.9.5000), firmware (>=14.0)
-Provides: com.chpwn.iconsupport, com.muirey03.iconsupportfix
-Replaces: com.chpwn.iconsupport, com.muirey03.iconsupportfix
